# optix_pt

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
configs/: .gitignore  alliance_ring.json  alpha_blend_mode_test.json  coffee.json  ior.json  metals.json  scene_selection.json  shoe.json  transmissive.json  wall.json  waterbottle.json
cu/: device_programs.cu  kernels.cu  light_sampling.cu  path_tracer.cu  path_tracer_naive.cu
include/: alpha_mode.h  anim.h  barycentrics.h  bsdf_sample.h  camera.h  cuda_helpers.h  cuda_math.h  cuda_utils.h  fresnel.h  gamma_correction.h  gl_utils.h  gl_window.h  gltf_loader.h  kernel_helpers.h  launch_params.h  light.h  main_window.h  material_data.h  material_flags.h  material_metallic_roughness.h  material_params.h  mesh.h  optix7_helpers.h  optix_utils.h  oren_nayar.h  orthonormal_basis.h  pointer_packing.h  prd.h  principled_bsdf.h  principled_bsdf_helpers.h  random_number_generators.h  reflection_and_refraction.h  renderer.h  sampling.h  sbt_record.h  scene_desc.h  scene_node.h  scene_properties.h  schlick.h  shape.h  (+9 more)
shaders/: basic.fs  basic.vs
src/: camera.cpp  gl_utils.cpp  gl_window.cpp  gltf_loader.cpp  light.cpp  main.cpp  main_window.cpp  mesh.cpp  renderer.cpp  scene_desc.cpp  stb_image_impl.cpp  tests.cpp  tiny_gltf_impl.cpp  utils.cpp
